deployment/k8s/base/e2e-profile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e2e-profile
  namespace: e2e-tanerincode
  labels:
    app: e2e-profile
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: e2e-profile
