deployment/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e2e-app
  namespace: e2e-tanerincode
  labels:
    app: e2e-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: e2e-app
