deployment/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e2e-app-ingress
  namespace: e2e-tanerincode
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: e2e-app.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: e2e-app
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e2e-profile-ingress
  namespace: e2e-tanerincode
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: e2e-profile.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: e2e-profile
            port:
              number: 80
